bug fix: fsize of the ipopular image on firefox

--- a/src/style.css
+++ b/src/style.css
@@ -530,6 +530,7 @@ HEBERGEMENT SECTION
 
 .popular__card__img {
   max-width: 40%;
+  min-width: 40%;
   height: 100%;
   overflow: hidden;
   border-top-left-radius: 20px;
